--- a/style.css
+++ b/style.css
@@ -1,6 +1,43 @@
 body {
     background-color: aqua;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+div.page {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 8fr;
+    grid-template-rows: 1fr 25fr 1fr;
+    grid-template-areas: 'header header'
+                         'menuArea mainContent'
+                         'footer footer';
+}
+
+div.header {
+    grid-area: header;
+    background-color: slateblue;
+    padding: 4px;
+    text-align: center;
+}
+
+div.menu {
+    grid-area: menuArea;
+    background-color: white;
+    padding: 4px;
+}
+
+div.mainContent {
+    grid-area: mainContent;
+    padding: 4px;
+}
+
+div.footer {
+    grid-area: footer;
+    background-color: lightgrey;
+    padding: 4px;
+    text-align: right;
 }
 
 img {
